--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "ts-standard",
-    "lint:fix": "ts-standard --fix"
+    "lint:fix": "ts-standard --fix",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
@@ -17,15 +19,22 @@
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "@vitest/ui": "^0.28.5",
     "autoprefixer": "^10.4.13",
+    "jsdom": "^21.1.0",
+    "msw": "^1.0.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "ts-standard": "^12.0.2",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vitest": "^0.28.5",
+    "whatwg-fetch": "^3.6.2"
   },
   "ts-standard": {
     "project": "./tsconfig.eslint.json"
